--- a/public/css/typography.css
+++ b/public/css/typography.css
@@ -30,8 +30,6 @@
   font-size: 4rem;
 }
 
-
-
 /* Font Weights */
 .font-thin {
   font-weight: 100;
@@ -55,6 +53,30 @@
   font-weight: 900;
 }
 
+/* Text Alignment */
+.text-left {
+  text-align: left;
+}
+.text-center {
+  text-align: center;
+}
+.text-right {
+  text-align: right;
+}
+.text-justify {
+  text-align: justify;
+}
+
+/* Line Heights */
+.leading-3 {
+  line-height: 0.75rem;
+}
+.leading-4 {
+  line-height: 1rem;
+}
+.leading-5 {
+  line-height: 1.25rem;
+}
 .leading-10 {
   line-height: 2.5rem;
 }
